# ANPR_Project

./: .gitignore  CMakeLists.txt  main.cpp
